Closed Bug 1812005 Opened 1 year ago Closed 1 year ago

Memory leak in telemetry/dap/DAPTelemetry.cpp

Categories

(Toolkit :: Telemetry, defect)

defect

Tracking

()

RESOLVED FIXED
111 Branch
Tracking Status
firefox111 --- fixed

People

(Reporter: sergesanspaille, Assigned: sergesanspaille)

References

(Blocks 1 open bug)

Details

Attachments

(1 file)

In dapHpkeEncrypt, the memory allocated by PK11_HPKE_Seal is never freed.

Using a UniqueSECItem to manage the allocated pointer.

Assignee: nobody → sguelton
Status: NEW → ASSIGNED
Pushed by sguelton@mozilla.com:
https://hg.mozilla.org/integration/autoland/rev/121a60127e2f
Free memory allocated by PK11_HPKE_Seal r=emilio
Status: ASSIGNED → RESOLVED
Closed: 1 year ago
Resolution: --- → FIXED
Target Milestone: --- → 111 Branch
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: