Bug 1812005 - Free memory allocated by PK11_HPKE_Seal r=emilio

Using a UniqueSECItem to manage the allocated pointer.

Differential Revision: https://phabricator.services.mozilla.com/D167644